--- a/Applications/CLI/BRAINSTools/README
+++ b/Applications/CLI/BRAINSTools/README
@@ -1,3 +1,3 @@
-This was a merge with the various BRAINSTools at 20100430 at noon.
+This was a merge with the various BRAINSTools at 20100506 at 6:00pm.
 
 
